# JigsawPuzzle

./: .gitignore  CMakeLists.txt  JigsawPuzzle.pro  README.md
qml/: PuzzleGame.qml  PuzzlePiece.qml  main.qml  qml.qrc
src/: main.cpp
